--- a/One-dimensional Array/One-dimensional Array.vcxproj.filters
+++ b/One-dimensional Array/One-dimensional Array.vcxproj.filters
@@ -24,5 +24,14 @@
     <ClCompile Include="10818.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2562.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10810.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10813.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
