--- a/One-dimensional Array/One-dimensional Array.vcxproj
+++ b/One-dimensional Array/One-dimensional Array.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="10871.cpp" />
     <ClCompile Include="1546.cpp" />
     <ClCompile Include="2562.cpp" />
+    <ClCompile Include="27866.cpp" />
     <ClCompile Include="3052.cpp" />
     <ClCompile Include="5597.cpp" />
   </ItemGroup>
