--- a/String/String.vcxproj.filters
+++ b/String/String.vcxproj.filters
@@ -21,5 +21,11 @@
     <ClCompile Include="2743.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\One-dimensional Array\9086.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11654.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
