--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="..\One-dimensional Array\27866.cpp" />
     <ClCompile Include="..\One-dimensional Array\9086.cpp" />
     <ClCompile Include="11654.cpp" />
+    <ClCompile Include="11720.cpp" />
     <ClCompile Include="2743.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
