--- a/String/String.vcxproj.filters
+++ b/String/String.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="11654.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="11720.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
