--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="..\One-dimensional Array\27866.cpp" />
     <ClCompile Include="..\One-dimensional Array\9086.cpp" />
+    <ClCompile Include="10809.cpp" />
     <ClCompile Include="11654.cpp" />
     <ClCompile Include="11720.cpp" />
     <ClCompile Include="2743.cpp" />
