--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="10809.cpp" />
     <ClCompile Include="11654.cpp" />
     <ClCompile Include="11720.cpp" />
+    <ClCompile Include="2675.cpp" />
     <ClCompile Include="2743.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
