--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="11720.cpp" />
     <ClCompile Include="2675.cpp" />
     <ClCompile Include="2743.cpp" />
+    <ClCompile Include="2908.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
