--- a/String/String.vcxproj.filters
+++ b/String/String.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="..\One-dimensional Array\1152.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2908.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
