--- a/String/String.vcxproj
+++ b/String/String.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="..\One-dimensional Array\9086.cpp" />
     <ClCompile Include="10809.cpp" />
     <ClCompile Include="11654.cpp" />
+    <ClCompile Include="11718.cpp" />
     <ClCompile Include="11720.cpp" />
     <ClCompile Include="2675.cpp" />
     <ClCompile Include="2743.cpp" />
