--- a/String/String.vcxproj.filters
+++ b/String/String.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="5622.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="11718.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
