--- a/Advanced1/Advanced1.vcxproj
+++ b/Advanced1/Advanced1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\String\25083.cpp" />
+    <ClCompile Include="3003.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
