--- a/Advanced1/Advanced1.vcxproj.filters
+++ b/Advanced1/Advanced1.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="..\String\25083.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3003.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
