--- a/Advanced1/Advanced1.vcxproj
+++ b/Advanced1/Advanced1.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="..\String\25083.cpp" />
     <ClCompile Include="10988.cpp" />
+    <ClCompile Include="1157.cpp" />
     <ClCompile Include="2444.cpp" />
     <ClCompile Include="3003.cpp" />
   </ItemGroup>
