--- a/Advanced1/Advanced1.vcxproj
+++ b/Advanced1/Advanced1.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="10988.cpp" />
     <ClCompile Include="1157.cpp" />
     <ClCompile Include="2444.cpp" />
+    <ClCompile Include="2941.cpp" />
     <ClCompile Include="3003.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
