--- a/Advanced1/Advanced1.vcxproj
+++ b/Advanced1/Advanced1.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="..\String\25083.cpp" />
     <ClCompile Include="10988.cpp" />
     <ClCompile Include="1157.cpp" />
+    <ClCompile Include="1316.cpp" />
     <ClCompile Include="2444.cpp" />
     <ClCompile Include="2941.cpp" />
     <ClCompile Include="3003.cpp" />
