--- a/Advanced1/Advanced1.vcxproj.filters
+++ b/Advanced1/Advanced1.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="2941.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1316.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
