--- a/Two-dimensional Array/Two-dimensional Array.vcxproj
+++ b/Two-dimensional Array/Two-dimensional Array.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10798.cpp" />
     <ClCompile Include="2566.cpp" />
     <ClCompile Include="2738.cpp" />
   </ItemGroup>
