--- a/General Mathematics 1/General Mathematics 1.vcxproj
+++ b/General Mathematics 1/General Mathematics 1.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="11005.cpp" />
     <ClCompile Include="2720.cpp" />
     <ClCompile Include="2745.cpp" />
+    <ClCompile Include="2903.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
