--- a/General Mathematics 1/General Mathematics 1.vcxproj
+++ b/General Mathematics 1/General Mathematics 1.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="2292.cpp" />
     <ClCompile Include="2720.cpp" />
     <ClCompile Include="2745.cpp" />
+    <ClCompile Include="2869.cpp" />
     <ClCompile Include="2903.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
