--- a/General Mathematics 1/General Mathematics 1.vcxproj.filters
+++ b/General Mathematics 1/General Mathematics 1.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="1193.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2869.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
