--- a/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj.filters
+++ b/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="5086.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2501.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
