--- a/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj
+++ b/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="2501.cpp" />
     <ClCompile Include="5086.cpp" />
+    <ClCompile Include="9506.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
