--- a/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj
+++ b/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1978.cpp" />
     <ClCompile Include="2501.cpp" />
     <ClCompile Include="5086.cpp" />
     <ClCompile Include="9506.cpp" />
