--- a/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj.filters
+++ b/Divisors Multiples Prime Numbers/Divisors Multiples Prime Numbers.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="9506.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1978.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
