--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="1085.cpp" />
     <ClCompile Include="27323.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
