--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="1085.cpp" />
     <ClCompile Include="27323.cpp" />
+    <ClCompile Include="3009.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
