--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="1085.cpp" />
+    <ClCompile Include="15894.cpp" />
     <ClCompile Include="27323.cpp" />
     <ClCompile Include="3009.cpp" />
   </ItemGroup>
