--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="15894.cpp" />
     <ClCompile Include="27323.cpp" />
     <ClCompile Include="3009.cpp" />
+    <ClCompile Include="9063.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
