--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj.filters
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="9063.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10101.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
