--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="15894.cpp" />
     <ClCompile Include="27323.cpp" />
     <ClCompile Include="3009.cpp" />
+    <ClCompile Include="5073.cpp" />
     <ClCompile Include="9063.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
