--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj.filters
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="10101.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="5073.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
