--- a/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
+++ b/Geometry-Rectangles and Triangles/Geometry-Rectangles and Triangles.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="10101.cpp" />
     <ClCompile Include="1085.cpp" />
+    <ClCompile Include="14215.cpp" />
     <ClCompile Include="15894.cpp" />
     <ClCompile Include="27323.cpp" />
     <ClCompile Include="3009.cpp" />
