--- a/Time Complexity/Time Complexity.vcxproj
+++ b/Time Complexity/Time Complexity.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="24262.cpp" />
+    <ClCompile Include="24263.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
