--- a/Time Complexity/Time Complexity.vcxproj
+++ b/Time Complexity/Time Complexity.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="24262.cpp" />
     <ClCompile Include="24263.cpp" />
+    <ClCompile Include="24264.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
