--- a/Time Complexity/Time Complexity.vcxproj
+++ b/Time Complexity/Time Complexity.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="24263.cpp" />
     <ClCompile Include="24264.cpp" />
     <ClCompile Include="24265.cpp" />
+    <ClCompile Include="24266.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
